# Programming-in-C-MFF

./: CMakeLists.txt
.github/workflows/: cmake.yml
Final/: CMakeLists.txt  INSTALL.md  INTERNALS.md  TUTORIAL.md
Final/comparer/: CMakeLists.txt  compare.cpp  tree_comparer.h
Final/comparer/compared_trees/: CMakeLists.txt  compared_AVL.h  compared_BST.h
Final/demo/: CMakeLists.txt  demo.cpp
Final/src/: AVL.h  BST.h  CMakeLists.txt  Node.h  main.cpp
Final/tests/: AVL_test.cpp  BST_test.cpp  CMakeLists.txt
labs/: CMakeLists.txt  README.md  specification.md
labs/hw1/: CMakeLists.txt  hw1.cpp  hw1.h  main.cpp  test_hw1.cpp
labs/hw2/: CMakeLists.txt  args.cpp  args.h  input2.txt  main.cpp  output2.txt  parser.cpp  parser.h  table.cpp  table.h  types.cpp  types.h
labs/lab1/: bubblesort.cpp  hello.cpp  input.cpp  tasks.md
labs/lab2/: foo.cpp  main.cpp  sort.cpp  sort.h  tasks.md
labs/lab3/: CMakeLists.txt  linked_list.cpp  linked_list.h  tasks.md  test_linked_list.cpp
labs/lab4/: CMakeLists.txt  tasks.md  test_sizeof.cpp
labs/lab5/: CMakeLists.txt  list.h  single_linked_list.cpp  tasks.md  test_list.cpp
labs/lab6/: CMakeLists.txt  list.h  single_linked_list.cpp  tasks.md  test_list.cpp  vector_list.cpp
labs/lab7/: CMakeLists.txt  memory_faults.cpp  tasks.md  test_ctor.cpp
labs/lab8/: CMakeLists.txt  histogram.cpp  histogram.h  list.cpp  list.h  memory.cpp  tasks.md  test_histogram.cpp  test_list.cpp
labs/lab9/: CMakeLists.txt  const_cast.cpp  iterators.cpp  overloading.cpp  tasks.md
labs/labA/: CMakeLists.txt  algorithms.cpp  functors.cpp  iterators.cpp  tasks.md
labs/labB/: CMakeLists.txt  algorithms.cpp  exceptions.cpp  lambdas.cpp  tasks.md
labs/labC/: CMakeLists.txt  clones.cpp  tasks.md
labs/labD/: CMakeLists.txt  compile_time.cpp  tasks.md  templates.cpp  type_programming.cpp
